fixed flex gap

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -112,7 +112,7 @@ main {
   justify-content: center;
   width: 100%;
   padding: 1rem;
-  margin-top:20%;
+  margin-top:10%;
 }
 
 /* .navbar {
